// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSumary with 0 expenses  1`] = `
<div>
  <p />
</div>
`;

exports[`Should render ExpensesSumary with one expense  1`] = `
<div>
  <h1>
     Viewing 
     
    expenses
     totaling 
    $1.50
     
  </h1>
</div>
`;

exports[`Should render ExpensesSumary with some expenses  1`] = `
<div>
  <h1>
     Viewing 
    4
     
    expenses
     totaling 
    $17.80
     
  </h1>
</div>
`;
